Removed loc code from a number of urls in favour for grabbing it from the JWT